--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,32 @@
 # Core ML/LLM dependencies
-vllm>=0.4.0
-transformers>=4.40.0
-torch>=2.0.0
+vllm==0.6.3  # PINNED for reproducibility
+transformers==4.46.0  # PINNED
+torch==2.4.1  # PINNED
 
 # Data handling
-pandas>=2.0.0
-numpy>=1.24.0
-datasets>=2.18.0
+pandas==2.2.0
+numpy==1.26.4
+datasets==2.18.0
 
 # Visualization
-matplotlib>=3.8.0
-seaborn>=0.13.0
+matplotlib==3.9.0
+seaborn==0.13.2
 
 # ML utilities
-scikit-learn>=1.4.0
+scikit-learn==1.5.0
+scipy==1.13.0  # For statistical tests (Friedman, Wilcoxon)
 
 # Utilities
-tqdm>=4.66.0
-pyyaml>=6.0.0
-requests>=2.31.0
+tqdm==4.66.4
+pyyaml==6.0.2
+requests==2.32.0
+
+# API clients
+anthropic==0.34.0  # For Claude judge
 
 # Development
-jupyter>=1.0.0
-ipykernel>=6.29.0
+jupyter==1.0.0
+ipykernel==6.29.5
 
 # Testing
-pytest>=8.0.0
+pytest==8.2.0
